crates/plotnik-tests/tests/04-emit/bytecode/binding/field_not_on_node.txt
Q = (function_declaration
  condition: (identifier) @name
) @fn
------------------ DIAGNOSTICS -------------------
error: `condition` is not a grammar field of `function_declaration`
 --> query.ptk:2:3
  |
1 | Q = (function_declaration
  |      -------------------- `function_declaration` starts here
2 |   condition: (identifier) @name
  |   ^^^^^^^^^
  |
help: valid grammar fields for `function_declaration`: `body`, `name`, `parameters`
